-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    4.0-dev

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2008 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 3.2
-----------------

5/19/09
    - The results struct returned by power flow or optimal power flow
      is now a strict superset of a MATPOWER case struct.
    - Extended ext2int.m and int2ext.m to handle converting entire case
      struct in a single call, storing the re-indexing info in the
      struct, using it to reorder other data structures/fields,
      execute callbacks to convert additional user data.
    - Split userfcn callbacks into multiple stages. Currently there are
      five: ext2int, formulation, int2ext, printpf, savecase.

4/14/09
    - Deprecate use of 'areas' data matrix. Remove it everywhere
      possible without breaking backward compatibility with version 1
      case files, which required it.
    - INCOMPATIBLE CHANGE: Calling loadcase() with 5 output arguments
      is now interpreted as ...
          [baseMVA, bus, gen, branch, gencost] = loadcase(casefile)
      ... instead of ...
          [baseMVA, bus, gen, branch, info] = loadcase(casefile)

3/25/09
    - Added add_userfcn.m as to make it easy to add a new
      userfcn to a case struct, whether or not it already
      has any. Modified the fixed reserve example to use this.

3/24/09
    - Added step-controlled PDIPM variant (OPF_ALG = 565) of
      AC OPF solver.

3/19/09
    - Added pdipm_qp() as a new QP/LP solver based on the
      pure Matlab PDIPM solver used for AC OPFs.
    - Added option 'OPF_ALG_DC' and refactored some code to allow
      the user to select the desired solver for DC OPF.
    - Added code to opf.m to automatically convert single-block
      piecewise linear costs to linear polynomial costs to reduce